[package]
name = "cryo_cli"
description = "cryo is the easiest way to extract blockchain data to parquet, csv, or json"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "cryo_cli"
path = "src/lib.rs"

[[bin]]
name = "cryo"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cryo_freeze = { version = "0.1.0", path = "../freeze" }

chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.4", features = ["derive", "color", "unstable-styles"] }
color-print = "0.3.4"
ethers = "2.0.7"
hex = "0.4.3"
polars = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
tokio = "1.29.0"
toml = "0.7"
colored = "2.0.0"
thousands = "0.2.0"
anstyle = "1.0.1"
eyre = "0.6.8"
governor = "0.5.1"
