[package]
name = "cryo_cli"
description = "cryo is the easiest way to extract blockchain data to parquet, csv, or json"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "cryo_cli"
path = "src/lib.rs"

[[bin]]
name = "cryo"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cryo_freeze = { version = "0.1.0", path = "../freeze" }

chrono = { workspace = true }
clap = { workspace = true }
color-print = { workspace = true }
ethers = { workspace = true }
hex = { workspace = true }
polars = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
colored = { workspace = true }
thousands = { workspace = true }
anstyle = { workspace = true }
eyre = { workspace = true }
governor = { workspace = true }
