[package]
name = "cryo_freeze"
description = "cryo is the easiest way to extract blockchain data to parquet, csv, or json"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
async-channel = { workspace = true }
backoff = { workspace = true }
cloud-storage = { workspace = true }
chrono = { workspace = true }
ethers = { workspace = true, features = ["rustls", "ws", "ipc"] }
futures = { workspace = true }
governor = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true }
polars = { workspace = true, features = [
    "parquet",
    "string_encoding",
    "polars-lazy",
    "lazy",
    "binary_encoding",
    "json",
    "dtype-struct",
] }
prefix-hex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "fs",
] }
tokio-util = { workspace = true }
